syntax = "proto3"; // mandatory first like
import "google/protobuf/timestamp.proto"; // import from other ptobuff files

package com.shopping.stubs.user; // this is mandatory but it get overwritten by the option java_package
option java_package = "com.shopping.stubs.user"; // the package in witch the files will be generated - target/classes/com/shopping/stubs/user/UserServiceGrpc.class
option java_multiple_files = true; // to generate the code in multiple files

service UserService {
  rpc getUserDetails(UserRequest) returns (UserResponse);
  rpc getOrdersForUsers(OrderRequest) returns (OrderResponse);
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string name = 3;
  int32 age = 4;
  Gender gender = 5;
}

//enum starts with 0
enum Gender {
  MALE = 0;
  FEMALE = 1;
  OTHER = 2;
}

message OrderRequest {
  int32 user_id = 1;
}

message OrderResponse {
  string order_name = 1;
  repeated Order order = 2; // this is what we use for arrays
}

message Order {
  int32 order_id = 1;
  int32 user_id = 2;
  string num_of_elements = 3;
  double total_amount = 4;
  google.protobuf.Timestamp order_date = 5;
}
